2024-04-20T08:15:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8763719207 # 199
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-20
* notice: last 14d: unq all: 22 207
* notice: prev accum: outdated-unq outdated-all / unq all: 609 3268 / 632 3473
* notice: next accum: outdated-unq outdated-all / unq all: 609 3268 / 633 3475
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-20]

2024-04-20T01:02:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8761397215 # 198
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-20
* notice: last 14d: unq all: 21 205
* notice: prev accum: outdated-unq outdated-all / unq all: 608 3266 / 631 3456
* notice: next accum: outdated-unq outdated-all / unq all: 609 3268 / 632 3473
* notice: prev exec diff / last date diff / accum: unq all: +1 +17 -0 -0 / +2 +19 -0 -0 / 2 19
* notice: removed / changed dates: [2024-04-05] / [2024-04-19]

2024-04-19T16:19:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8756604401 # 197
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: last 14d: unq all: 21 190
* notice: prev accum: outdated-unq outdated-all / unq all: 608 3266 / 630 3454
* notice: next accum: outdated-unq outdated-all / unq all: 608 3266 / 631 3456
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-19]

2024-04-19T01:02:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8746809707 # 195