@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-20T08:15:58Z",
+  "timestamp" : "2024-04-22T08:19:06Z",
   "count_outdated" : 3268,
   "uniques_outdated" : 609,
-  "count" : 3475,
-  "uniques" : 633,
+  "count" : 3477,
+  "uniques" : 634,
   "views" : [
     {
       "timestamp": "2024-04-08T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2024-04-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
