@@ -1,5 +1,5 @@
 {
-  "count": 207,
+  "count": 209,
   "uniques": 22,
   "views": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2024-04-20T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-22T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
