@@ -1,3 +1,12 @@
+2024-04-22T08:19:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8780802265 # 205
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-22
+* notice: last 14d: unq all: 22 209
+* notice: prev accum: outdated-unq outdated-all / unq all: 609 3268 / 633 3475
+* notice: next accum: outdated-unq outdated-all / unq all: 609 3268 / 634 3477
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-04-22]
+
 2024-04-20T08:15:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8763719207 # 199
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-20
